# AMD-OHC-2024

./: README.md
artifacts/coyote-experiments/: CMakeLists.txt  constrs_1.xdc  flow_alveo.sh  tmp.py
artifacts/coyote-experiments/cmake/: FindCoyoteHW.cmake  FindCoyoteSW.cmake
artifacts/coyote-experiments/driver/: coyote_drv.mod  fpga_gup.c  fpga_hw.c  fpga_pops.c  fpga_pr.c  fpga_pr.h
artifacts/coyote-experiments/examples/aes_cntr/: vfpga_top.svh
artifacts/coyote-experiments/examples/hyperloglog/: vfpga_top.svh
artifacts/coyote-experiments/examples/perf_host/: vfpga_top.svh
artifacts/coyote-experiments/examples/perf_host/hdl/: perf_host.sv
artifacts/coyote-experiments/examples/perf_rdma/hdl/: perf_rdma.sv
artifacts/coyote-experiments/hw/: examples.cmake
artifacts/coyote-experiments/hw/hdl/shell/: cnfg_slave.sv  cnfg_slave_avx.sv  shell_cc.sv
artifacts/coyote-experiments/hw/hdl/static/: dcpl_static.sv  static_slave.sv
artifacts/coyote-experiments/hw/sim/examples/: icrc_tb.sv  intrusion_detection_tb.sv
artifacts/coyote-experiments/scripts/: cr_shell.tcl.in  cr_user.tcl.in  flow_bitgen.tcl.in  flow_comp.tcl.in  flow_dyn.tcl.in  package.tcl.in
artifacts/coyote-experiments/scripts/bd/: cr_ctrl.tcl  cr_hbm.tcl  cr_pci.tcl
artifacts/coyote-experiments/scripts/ip_inst/: common_infrastructure.tcl  network_infrastructure.tcl  pci_infrastructure.tcl  shell_infrastructure.tcl
artifacts/coyote-experiments/scripts/wr_hdl/template_gen/: cyt_top_tmplt.txt  dynamic_top_tmplt.txt  lynx_pkg_tmplt.txt  shell_ctrl_tmplt.txt  shell_top_tmplt.txt  (+4 more)
artifacts/coyote-experiments/sw/src/: cProcess.cpp  ibvQpConn.cpp
(+38 files in other folders)
